# challenge

./: .gitignore  README.md
contract/: Cargo.toml  lib.rs
contracts/hardxore/: Cargo.toml  build.sh  lib.rs
examples/python/: example.py  requirements.txt
examples/rust/: Cargo.toml
examples/rust/src/: actions.rs  badges.rs  main.rs  rpc.rs  state.rs
metadata/: hardxore.json
