[package]
name = "rust-example"
version = "0.1.0"
edition = "2021"
authors = ["Cardinal Cryptography"]
publish = false

[dependencies]
clap = { version = "4.0", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
subxt = "0.24.0"
tokio = { version = "1.18", features = ["rt-multi-thread", "macros", "time"] }
